--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
       <meta name="description"
-         content="With the divine grace of the almighty, inviting you and your family to Sonali's wedding to be held on 29th November at Ashirwad Garden, Ratu, Ranchi from 7:00 PM onwards.">
+         content="With the divine grace of the almighty, inviting you and your family to Mansi's wedding to be held on 29th November at Ashirwad Garden, Ratu, Ranchi from 7:00 PM onwards.">
       <meta name="author" content="Vinit Shahdeo">
       <meta name="email" content="vinitshahdeo@gmail.com">
       <meta name="copyright" content="Vinit Shahdeo 2020" />
@@ -39,9 +39,9 @@
       <section id="media"></section>
       <div class="wrap">
          <div class="title">
-            <h1>Sonali </h1>
+            <h1>Mansi </h1>
             <h2>&</h2>
-            <h1>Gagan</h1>
+            <h1>Omkar</h1>
             <h3>Are getting married</h3>
             <p>
                on <span class="date">29 November 2020</span></29>, At <span class="place">Ashirwad Garden</span> Ratu, Ranchi                
